browser transcription app

--- a/15/backend/Pipfile
+++ b/15/backend/Pipfile
@@ -4,6 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+fastapi = "*"
+uvicorn = "*"
+python-multipart = "*"
+openai = "*"
+python-dotenv = "*"
+aiofiles = "*"
 
 [dev-packages]
 
